# my-codex

./: .gitignore  AGENTS.md  README.md  requirements.txt
plugins/doc-watcher/backend/: pyproject.toml
plugins/doc-watcher/backend/app/: config.py  main.py
plugins/doc-watcher/backend/app/api/: deps.py
plugins/doc-watcher/backend/app/api/v1/: audit.py  changes.py  dashboard.py  doc_prs.py  docs.py  impacts.py  patches.py  projects.py  router.py  (+1 more)
plugins/doc-watcher/backend/app/core/: doc_utils.py  exceptions.py
plugins/doc-watcher/backend/app/database/: session.py
plugins/doc-watcher/backend/app/git_providers/: __init__.py  gitea.py  local.py
plugins/doc-watcher/backend/app/llm/: base.py  change_interpreter.py  doc_reviewer.py  impact_analyzer.py  patch_writer.py  pr_author.py
plugins/doc-watcher/backend/app/schemas/: audit.py  commit.py  doc_impact.py  project.py
plugins/doc-watcher/backend/app/services/: audit_read_model.py  audit_runner.py  commit_scanner.py  config_parser.py  doc_pr_service.py  doc_scanner.py  docops_initializer.py  impact_service.py  llm_service.py  module_matcher.py  patch_service.py  project_service.py
plugins/doc-watcher/backend/src/docwatcher_backend/: __init__.py
plugins/doc-watcher/backend/tests/: conftest.py  test_audit_api.py  test_commit_scanner.py  test_config_parser.py  test_dashboard_api.py  test_doc_pr_service.py  test_doc_utils.py  test_docops_initializer.py  test_gitea_provider.py  test_health.py  test_impact_service.py  test_module_matcher.py  test_patch_service.py  test_project_service.py  test_webhooks.py
(+190 files in other folders)
